add update-stock endpoint
